<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/action_bar_container"
        layout="@layout/appbar" />

    <LinearLayout

        android:id="@+id/calculator_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/calculator_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <jaanpehchan.rural.srei.CustomFontTextView
                android:id="@+id/text_head_field"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/field"
                android:textColor="#000000"
                android:textSize="17sp"
                app:fontName="Avenir_Book_01" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/separator" />

            <jaanpehchan.rural.srei.CustomFontTextView
                android:id="@+id/text_head_value"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/value"
                android:textColor="#000000"
                android:textSize="17sp"
                app:fontName="Avenir_Book_01" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separator" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="317dp"
                android:layout_height="46dp">

                <jaanpehchan.rural.srei.CustomFontTextView
                    android:id="@+id/text_asset"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/asset_cost"
                    android:textAllCaps="true"
                    android:textColor="#7f000000"
                    android:textSize="17sp"
                    app:fontName="Avenir_Book_01" />

                <jaanpehchan.rural.srei.CustomFontEditText
                    android:id="@+id/text_assest_val"
                    style="@style/TextItemValueStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/u20b9_10_00_000" />
            </LinearLayout>

            <View
                android:layout_width="317dp"
                android:layout_height="1dp"
                android:background="@color/separator" />


            <LinearLayout
                android:layout_width="317dp"
                android:layout_height="46dp">

                <jaanpehchan.rural.srei.CustomFontTextView
                    android:id="@+id/text_financed_amt"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/financed_amt"
                    android:textAllCaps="true"
                    android:textColor="#7f000000"
                    android:textSize="17sp"
                    app:fontName="Avenir_Book_01" />

                <jaanpehchan.rural.srei.CustomFontEditText
                    android:id="@+id/text_financed_amt_val"
                    style="@style/TextItemValueStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/u20b9_10_00_000" />
            </LinearLayout>

            <View
                android:layout_width="317dp"
                android:layout_height="1dp"
                android:background="@color/separator" />


            <LinearLayout
                android:layout_width="317dp"
                android:layout_height="46dp">

                <jaanpehchan.rural.srei.CustomFontTextView
                    android:id="@+id/text_irr"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/irr"
                    android:textAllCaps="true"
                    android:textColor="#7f000000"
                    android:textSize="17sp"
                    app:fontName="Avenir_Book_01" />

                <jaanpehchan.rural.srei.CustomFontEditText
                    android:id="@+id/text_irr_val"
                    style="@style/TextItemValueStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/_10" />
            </LinearLayout>

            <View
                android:layout_width="317dp"
                android:layout_height="1dp"
                android:background="@color/separator" />


            <LinearLayout

                android:layout_width="317dp"
                android:layout_height="46dp">

                <jaanpehchan.rural.srei.CustomFontTextView
                    android:id="@+id/text_tenure"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/tenure"
                    android:textAllCaps="true"
                    android:textColor="#7f000000"
                    android:textSize="17sp"
                    app:fontName="Avenir_Book_01" />

                <jaanpehchan.rural.srei.CustomFontEditText
                    android:id="@+id/text_tenure_val"
                    style="@style/TextItemValueStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/_48_months" />
            </LinearLayout>
            <View
                android:layout_width="317dp"
                android:layout_height="1dp"
                android:background="@color/separator" />

            <LinearLayout
                android:layout_width="317dp"
                android:layout_height="46dp">

                <jaanpehchan.rural.srei.CustomFontTextView
                    android:id="@+id/text_pay_freq"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/pay_frequency"
                    android:textAllCaps="true"
                    android:textColor="#7f000000"
                    android:textSize="17sp"
                    app:fontName="Avenir_Book_01" />

                <jaanpehchan.rural.srei.CustomFontEditText
                    android:id="@+id/text_pay_freq_val"
                    style="@style/TextItemValueStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/half_yearly" />
            </LinearLayout>

            <View
                android:layout_width="317dp"
                android:layout_height="1dp"
                android:background="@color/separator" />

            <LinearLayout
                android:layout_width="317dp"
                android:layout_height="46dp">

                <jaanpehchan.rural.srei.CustomFontTextView
                    android:id="@+id/text_moratorium"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="moratorium"
                    android:textAllCaps="true"
                    android:textColor="#7f000000"
                    android:textSize="17sp"
                    app:fontName="Avenir_Book_01" />

                <jaanpehchan.rural.srei.CustomFontEditText
                    android:id="@+id/text_moratorium_val"
                    style="@style/TextItemValueStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="12 Months" />
            </LinearLayout>

            <View
                android:layout_width="317dp"
                android:layout_height="1dp"
                android:background="@color/separator" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/container_of_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <jaanpehchan.rural.srei.CustomFontTextView
                android:id="@+id/text_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/u20b9_20_000"
                android:visibility="invisible"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="50sp"
                app:fontName="Avenir_Book_01" />

            <jaanpehchan.rural.srei.CustomFontTextView
                android:id="@+id/text_amount_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/calculated_installment_amount"
                android:textAllCaps="true"
                android:visibility="invisible"
                android:textColor="#7f000000"
                android:textSize="17sp"
                app:fontName="Avenir_Book_01" />
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/calculator_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/button_cal_installment"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@color/button_background_color"
            android:paddingTop="10dp"
            android:text="@string/calculate_installment"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/text_button_size" />

        <ImageView
            android:id="@+id/button_cal_submit"
            android:layout_width="66dp"
            android:layout_height="66dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="34dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="TODO"
            android:elevation="6dp"
            android:src="@drawable/submit_button" />
    </RelativeLayout>
</LinearLayout>
